# GSTranslator

./: ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac
src/: Makefile.am  Makefile.in  data_logger.c  data_logger.h  gstranslator.ui  main.c  main.h  properties.c  properties.h  properties.ui  request.c  request.h  xml_parser.c  xml_parser.h
src/config/: Makefile.am  Makefile.in  config.xml  languages  languages.xml
src/desktop/: Makefile.am  Makefile.in  gstranslator.desktop
src/icon/: Makefile.am  Makefile.in
src/kbflags/: Makefile.am  Makefile.in
