dnl Process this file with autoconf to produce a configure script.
dnl Created by Anjuta application wizard.

AC_INIT(gstranslator, 0.1)
m4_ifdef([AM_SILENT_RULES],[AM_SILENT_RULES([yes])])

AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
AC_CONFIG_HEADERS([config.h])
AM_MAINTAINER_MODE

AC_PROG_CC






AM_PROG_LIBTOOL



PKG_CHECK_MODULES(GSTRANSLATOR, glib-2.0
libxml-2.0
libnotify
keybinder-3.0
json-glib-1.0
[gtk+-3.0 ])




AC_OUTPUT([
Makefile
src/Makefile


src/config/Makefile
src/kbflags/Makefile
src/icon/Makefile])
