icondir = $(datadir)/pixmaps/
icon16dir = $(datadir)/icons/hicolor/16x16/apps/
icon22dir = $(datadir)/icons/hicolor/22x22/apps/
icon32dir = $(datadir)/icons/hicolor/32x32/apps/
icon48dir = $(datadir)/icons/hicolor/48x48/apps/
icon64dir = $(datadir)/icons/hicolor/64x64/apps/
icon128dir = $(datadir)/icons/hicolor/128x128/apps/
icon256dir = $(datadir)/icons/hicolor/256x256/apps/

icon_DATA = gstranslator.png
icon16_DATA = 16x16/gstranslator.png
icon22_DATA = 22x22/gstranslator.png
icon32_DATA = 32x32/gstranslator.png
icon48_DATA = 48x48/gstranslator.png
icon64_DATA = 64x64/gstranslator.png
icon128_DATA = 128x128/gstranslator.png
icon256_DATA = 256x256/gstranslator.png

EXTRA_DIST = \
	$(icon_DATA) \
	$(icon16_DATA) \
	$(icon22_DATA) \
	$(icon32_DATA) \
	$(icon48_DATA) \
	$(icon64_DATA) \
	$(icon128_DATA) \
	$(icon256_DATA)
