kbflagsdir = $(datadir)/gstranslator/kbflags

kbflags_DATA =\
	gb.png\
	pl.png\
	ad.png\
	ae.png\
	ag.png\
	ai.png\
	al.png\
	am.png\
	an.png\
	ao.png\
	aq.png\
	ar.png\
	as.png\
	at.png\
	au.png\
	aw.png\
	az.png\
	ba.png\
	bb.png\
	bd.png\
	be.png\
	bf.png\
	bg.png\
	bh.png\
	bi.png\
	bj.png\
	bm.png\
	bn.png\
	bo.png\
	br.png\
	bs.png\
	bt.png\
	bv.png\
	bw.png\
	by.png\
	bz.png\
	ca.png\
	cc.png\
	cf.png\
	cg.png\
	ch.png\
	ci.png\
	ck.png\
	cl.png\
	cm.png\
	cn.png\
	co.png\
	cr.png\
	ct.png\
	cu.png\
	cv.png\
	cy.png\
	cz.png\
	de.png\
	dj.png\
	dk.png\
	dm.png\
	do.png\
	dz.png\
	ec.png\
	ee.png\
	eg.png\
	eh.png\
	er.png\
	es.png\
	es_pv.png\
	et.png\
	eu.png\
	fi.png\
	fj.png\
	fo.png\
	fr.png\
	ga.png\
	gb2.png\
	gd.png\
	ge.png\
	gh.png\
	gi.png\
	gl.png\
	gm.png\
	gn.png\
	gq.png\
	gr.png\
	gt.png\
	gu.png\
	gw.png\
	gy.png\
	hk.png\
	hn.png\
	hr.png\
	ht.png\
	hu.png\
	id.png\
	ie.png\
	il.png\
	in.png\
	iq.png\
	ir.png\
	is.png\
	it.png\
	jm.png\
	jo.png\
	jp.png\
	ke.png\
	kg.png\
	kh.png\
	ki.png\
	km.png\
	kn.png\
	kp.png\
	kr.png\
	kw.png\
	kz.png\
	la.png\
	lb.png\
	lc.png\
	li.png\
	lk.png\
	lr.png\
	ls.png\
	lt.png\
	lu.png\
	lv.png\
	ly.png\
	ma.png\
	mc.png\
	md.png\
	mg.png\
	mh.png\
	mk.png\
	ml.png\
	mm.png\
	mn.png\
	mo.png\
	mr.png\
	ms.png\
	mt.png\
	mu.png\
	mv.png\
	mw.png\
	mx.png\
	my.png\
	mz.png\
	na.png\
	ne.png\
	ng.png\
	ni.png\
	nl.png\
	no.png\
	np.png\
	nr.png\
	nz.png\
	om.png\
	pa.png\
	pe.png\
	pf.png\
	pg.png\
	ph.png\
	pk.png\
	pr.png\
	ps.png\
	pt.png\
	pw.png\
	py.png\
	qa.png\
	re.png\
	ro.png\
	rs.png\
	ru.png\
	rw.png\
	sa.png\
	sb.png\
	sc.png\
	se.png\
	sg.png\
	si.png\
	sk.png\
	sl.png\
	sm.png\
	sn.png\
	so.png\
	sr.png\
	st.png\
	sv.png\
	sy.png\
	sz.png\
	tc.png\
	td.png\
	tf.png\
	tg.png\
	th.png\
	tj.png\
	tl.png\
	tn.png\
	to.png\
	tr.png\
	tt.png\
	tv.png\
	tw.png\
	tz.png\
	ua.png\
	ug.png\
	um.png\
	us.png\
	uy.png\
	uz.png\
	va.png\
	vc.png\
	ve.png\
	vg.png\
	vi.png\
	vn.png\
	vu.png\
	ws.png\
	ye.png\
	za.png\
	zm.png\
	zw.png

EXTRA_DIST = $(kbflags_DATA)
